--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "ts-node": "^10.9.2",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.1",
+    "util": "^0.12.5",
     "vite": "^7.0.4"
   }
 }
